# first_ocr_app

./: .gitignore  encoded_pdf.txt  openapi.yaml  openapi_mod.yaml  pyproject.toml  run.py  setup_nltk.py
analized_texts/: lemmatize_text.txt
cliente/: app.py  encoder.py  error_handler.py  routes.py  run.py  script.py
database/: config.py  create_db.sql  db_manager.py
database/models/: historico.py
ocr_pdf/: analyze_text.py  lemmatizer.py  main.py  ocr_producer.py  output_analyzed_texts.py  pdf_converter.py  settings.json  setup.py  setup_nltk.py  stemmer.py  tokenizer.py  vectorizer.py
output_texts/: pagina_1.txt  pagina_2.txt  pagina_3.txt  pagina_4.txt  pagina_5.txt
process_pdf/: app.py  encoder.py  file_uploader.py  lemmatizer.py  main.py  ocr_producer.py  output_analyzed_texts.py  pdf_converter.py  process_to_images.py  routes.py  script.py  tokenizer.py  vectorizer.py
tests/: analizar_docs_test.py  get_tests.py  lemmatizer_test.py  ocr_test.py  process_docs_test.py  test_client.py  test_tokenizer.py  test_vectorizer.py  tokenizer_test.py  vectorizer_test.py
