[tool.poetry]
name = "ocr-pdf"
version = "0.1.0"
description = ""
authors = ["nelparajon <nelparajonsomoano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
flask = "^3.0.3"
requests = "^2.32.3"
pypdf2 = "^3.0.1"
sqlalchemy = "^2.0.31"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
flask-migrate = "^4.0.7"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
